--- a/app/views/pages/items/show.liquid
+++ b/app/views/pages/items/show.liquid
@@ -1,4 +1,4 @@
 {% liquid
-  include 'lib/items/main', id: params.id
+  include 'lib/items/search', id: params.id
   include 'theme/simple/items/show', item: context.exports.item
 %}
