--- a/app/views/partials/lib/consumers/item_created/update_search_form.liquid
+++ b/app/views/partials/lib/consumers/item_created/update_search_form.liquid
@@ -1,2 +1,4 @@
-{% include 'lib/items/search', id: event.object.id %}
-{% include 'lib/search/update_search_form', tags: context.exports.item.properties.tags %}
+{% liquid
+  include 'lib/items/search', id: event.object.id
+  include 'lib/search/update_search_form', tags: context.exports.item.tags
+%}
