--- a/app/views/partials/lib/events/create-event.liquid
+++ b/app/views/partials/lib/events/create-event.liquid
@@ -1,13 +1,15 @@
 {% background "bg-task-name", type: type, object_id: object_id, actor_id: actor_id, target_id: target_id %}
 {% liquid
-  assign registry = 'event'
+  include 'lib/events/build', type: type, actor_id: actor_id, object_id: object_id, target_id: target_id
+  include 'lib/events/validate', event: context.exports.event
 
-  include 'lib/events/build', type: type, actor_id: actor_id, object_id: object_id, target_id: target_id, registry: registry
-  include 'lib/events/validate', event: context.exports[registry]
+  if context.exports.event.valid
+    include 'lib/events/create', event: context.exports.event
+    include 'lib/events/broadcast', event: context.exports.event
 
-  if context.exports[registry].valid
-    include 'lib/events/create', event: context.exports[registry], registry: registry
-    include 'lib/events/broadcast', event: context.exports[registry]
+    log context.exports.event.payload.type, type: 'showme EVENT'
+  else
+    log context.exports.event, type: 'EventCreate error:'
   endif
 %}
 {% endbackground %}
