--- a/app/views/partials/theme/simple/orders/form.liquid
+++ b/app/views/partials/theme/simple/orders/form.liquid
@@ -25,10 +25,10 @@
   </thead>
   <tbody>
     <tr>
-      <td class="px-4 py-2 border">{{ item.properties.name }}</td>
-      <td class="px-4 py-2 border">{{ item.properties.price | pricify }}</td>
+      <td class="px-4 py-2 border">{{ item.name }}</td>
+      <td class="px-4 py-2 border">{{ item.price | pricify }}</td>
       <td class="px-4 py-2 border">1</td>
-      <td class="px-4 py-2 border">{{ order.properties.total | pricify }}</td>
+      <td class="px-4 py-2 border">{{ order.total | pricify }}</td>
     </tr>
   </tbody>
 </table>
