--- a/app/views/pages/orders/create.liquid
+++ b/app/views/pages/orders/create.liquid
@@ -3,17 +3,21 @@ method: post
 ---
 
 {% liquid
-  include 'lib/items/main', id: context.params.item_id
+  include 'lib/items/search', id: context.params.item_id
   include 'lib/orders/validate', item: context.exports.item, current_user_id: context.current_user.id
+
 
   if context.exports.order.valid
     include 'lib/orders/create', order: context.exports.order
-    include 'lib/events/create-event', type: 'order_created', actor_id: context.current_user.id, target_id: context.exports.item.id, object_id: context.exports.order.id
 
-    include 'lib/order_statuses/validate', order: context.exports.order, current_user_id: context.current_user.id, status: 'app.order_statuses.placed', registry: 'os'
-    include 'lib/order_statuses/create', object: context.exports.os.object
+    include 'lib/order_statuses/validate', order: context.exports.order, current_user_id: context.current_user.id, status: 'app.order_statuses.placed'
+    include 'lib/order_statuses/create', status: context.exports.status
     include 'lib/events/create-event', type: 'order_status_created', actor_id: context.current_user.id, target_id: context.exports[registry].object.properties.order_id, object_id: context.exports[registry].object.id
-    include 'async-operation', uuid: context.exports.last_operation_uuid, success: '/dashboard/buy/orders'
+
+    include 'lib/flash/publish', notice: 'app.order_created'
+    assign url = '/dashboard/buy/orders'
+    redirect_to url
+    break
   else
     include 'theme/simple/orders/new', item: context.exports.item, order: context.exports.order
   endif
