--- a/app/views/partials/lib/items/main.liquid
+++ b/app/views/partials/lib/items/main.liquid
@@ -1,9 +1,5 @@
 {% liquid
-  assign icons = "alarm ambulance ban bandage calendar car yin-yang flame disc crop command compass copy stack star cut globe glass-full virus key trophy wand woman" | split: ' ' | sort
-  export icons, namespace: 'lib'
+  assign icons = 'lib.categories' | t | parse_json
 
-  if id
-    graphql item  = 'items/search', limit: 1, id: id | fetch: 'items' | fetch: 'results' | first
-    export item
-  endif
+  export icons, namespace: 'lib'
 %}
