--- a/app/views/partials/lib/items/save.liquid
+++ b/app/views/partials/lib/items/save.liquid
@@ -1,6 +1,6 @@
 <!-- push to background -->
 {% liquid
-  graphql item = 'items/create', args: item.properties | fetch: 'model_create'
+  graphql item = 'items/create', args: item | fetch: 'model_create'
 
   export item
 %}
