--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -5,10 +5,8 @@
     assign path = 'create'
   endif
   assign uuid = '' | uuid
-  assign item_uuid = item.properties.uuid | default: uuid
+  assign item_uuid = item.uuid | default: uuid
 %}
-
-<!-- {{ item.errors }} -->
 
 <section class="text-gray-700 body-font">
   <div class="container flex flex-wrap items-center mx-auto">
@@ -18,64 +16,65 @@
       {% if item.id %}
         <input type="hidden" name="item[id]" value="{{ item.id }}" />
       {% endif %}
-      <input type="hidden" name="item[properties][uuid]" value="{{ item_uuid }}" />
+      <input type="hidden" name="item[uuid]" value="{{ item_uuid }}" />
 
       <div class="my-3">
         <label class="block" for="name">Name</label>
-        <input class="w-2/3 form-input" type="text" id="name" name="item[properties][name]" value="{{ item.properties.name }}" />
-        {% if item.errors.properties.name %}
-        <span class="text-red-800">{{ item.errors.properties.name }}</span>
+        <input class="w-2/3 form-input" type="text" id="name" name="item[name]" value="{{ item.name }}" />
+        {% if item.errors.name %}
+        <span class="text-red-800">{{ item.errors.name }}</span>
         {% endif %}
       </div>
 
       <div class="mt-3">
         <label class="block" for="type">Type</label>
-        <input class="w-2/3 form-input" type="text" id="type" name="item[properties][type]" value="{{ item.properties.type }}" />
-        {% if item.errors.properties.type %}
-        <span class="text-red-800">{{ item.errors.properties.type }}</span>
+        <input class="w-2/3 form-input" type="text" id="type" name="item[type]" value="{{ item.type }}" />
+        {% if item.errors.type %}
+        <span class="text-red-800">{{ item.errors.type }}</span>
         {% endif %}
       </div>
 
       <div class="mt-3">
         <label class="block" for="description">Description</label>
-        <textarea class="w-full form-input" type="text" id="description" name="item[properties][description]"
-          rows="3">{{ item.properties.description }}</textarea>
+        <textarea class="w-full form-input" type="text" id="description" name="item[description]"
+          rows="3">{{ item.description }}</textarea>
 
-        {% if item.errors.properties.description %}
-        <span class="text-red-800">{{ item.errors.properties.description }}</span>
+        {% if item.errors.description %}
+        <span class="text-red-800">{{ item.errors.description }}</span>
         {% endif %}
       </div>
 
       <div class="mt-3">
         <label class="block" for="tags">Tags</label>
-        <input class="w-full form-input" type="text" id="tags" name="item[properties][tags]"
-          value="{{ item.properties.tags | join: ',' }}" />
-        {% if item.errors.properties.tags %}
-        <span class="text-red-800">{{ item.errors.properties.tags }}</span>
+        <input class="w-full form-input" type="text" id="tags" name="item[tags]"
+          value="{{ item.tags | join: ',' }}" />
+        {% if item.errors.tags %}
+        <span class="text-red-800">{{ item.errors.tags }}</span>
         {% endif %}
       </div>
 
       <div class="mt-3">
         <label class="block" for="price">Price</label>
-        <input class="w-32 form-input" type="number" id="price" name="item[properties][price]"
-          value="{{ item.properties.price | default: 10 }}" />
-        {% if item.errors.properties.price %}
-        <span class="text-red-800">{{ item.errors.properties.price }}</span>
+        <input class="w-32 form-input" type="number" id="price" name="item[price]"
+          value="{{ item.price | default: 10 }}" />
+        {% if item.errors.price %}
+        <span class="text-red-800">{{ item.errors.price }}</span>
         {% endif %}
       </div>
 
+          {{ item }}
       <div class="mt-3">
         <label class="block" for="cover_photo">Icon</label>
-        <select class="w-64 form-select" id="price" name="item[properties][cover_photo]">
-          {% for icon in context.exports.lib.icons %}
-          <option value="{{ icon }}" {% if item.properties.cover_photo == icon %}selected{% endif %}>
+        <select class="w-64 form-select" id="price" name="item[cover_photo]">
+          {% for icon in icons %}
+          <option value="{{ icon }}" {% if item.cover_photo == icon %}selected{% endif %}>
             {{ icon }}
           </option>
           {% endfor %}
         </select>
 
-        {% if item.errors.properties.cover_photo %}
-        <span class="text-red-800">{{ item.errors.properties.cover_photo }}</span>
+        {% if item.errors.cover_photo %}
+        <span class="text-red-800">{{ item.errors.cover_photo }}</span>
         {% endif %}
       </div>
 
