wrap everything around command

--- a/app/views/pages/admin.html.liquid
+++ b/app/views/pages/admin.html.liquid
@@ -2,9 +2,9 @@
   include 'lib/must_be_authenticated'
   include 'lib/must_be_superadmin'
 
-  include 'lib/users/search', limit: 10
-  include 'lib/orders/search', limit: 10
-  include 'lib/items/search', limit: 10
+  include 'lib/queries/users/search', limit: 10
+  include 'lib/queries/orders/search', limit: 10
+  include 'lib/queries/items/search', limit: 10
 
   include 'theme/simple/admin/recent', items: context.exports.items, users: context.exports.users, orders: context.exports.orders
 %}
