--- a/app/views/pages/index.html.liquid
+++ b/app/views/pages/index.html.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  include 'lib/items/search', limit: 6, featured: true
+  include 'lib/queries/items/search', query: context.params, limit: 9, featured: true
   include 'lib/search/main'
 
   include 'theme/simple/home/index', items: context.exports.items, filters: context.exports.search_form.properties
