--- a/app/views/pages/orders/new.liquid
+++ b/app/views/pages/orders/new.liquid
@@ -1,6 +1,10 @@
 {% liquid
   include 'lib/must_be_authenticated'
-  include 'lib/items/search', id: context.params.item_id
-  include 'lib/orders/validate', item: context.exports.item, current_user_id: context.current_user.id
+
+  include 'lib/queries/items/find', id: context.params.item_id
+
+  include 'lib/commands/orders/create/build', item: context.exports.item, current_user_id: context.current_user.id
+  include 'lib/commands/orders/create/check', order: context.exports.order
+
   include 'theme/simple/orders/new', item: context.exports.item, order: context.exports.order
 %}
