--- a/app/views/pages/users/create.liquid
+++ b/app/views/pages/users/create.liquid
@@ -3,9 +3,21 @@ slug: users
 method: post
 ---
 {% liquid
-  include 'lib/users/create', user: context.params.user
+  include 'lib/commands/users/create/build', object: context.params.user
+  include 'lib/commands/users/create/check', object: context.exports.object
+
   if context.exports.object.valid
-    redirect_to '/'
+    include 'lib/commands/users/create/execute', object: context.exports.object
+
+    if context.exports.object.valid
+      include 'lib/sessions/create', object: context.exports.object
+
+      include 'lib/events/create-event', type: 'account_created', actor_id: context.exports.object.id
+
+      include 'redirect_to', url: '/dashboard', notice: 'app.account.created'
+    else
+    endif
+
   else
     include 'theme/simple/users/new', object: context.exports.object
   endif
