--- a/app/views/partials/lib/consumers/item_created/update_search_form.liquid
+++ b/app/views/partials/lib/consumers/item_created/update_search_form.liquid
@@ -1,4 +1,8 @@
 {% liquid
-  include 'lib/items/search', id: event.object.id
+  log event, type: 'info.events.item_created'
+  include 'lib/queries/items/find', id: event.object.id
+
+  log context.exports, type: 'info.events.item_created'
+
   include 'lib/search/update_search_form', tags: context.exports.item.tags
 %}
