--- a/app/views/partials/lib/consumers/item_updated/update_search_form.liquid
+++ b/app/views/partials/lib/consumers/item_updated/update_search_form.liquid
@@ -1,2 +1,2 @@
-{% include 'lib/items/search', id: event.object.id %}
+{% include 'lib/queries/items/find', id: event.object.id %}
 {% include 'lib/search/update_search_form', tags: context.exports.item.tags %}
