--- a/app/views/pages/items/new.liquid
+++ b/app/views/pages/items/new.liquid
@@ -1,7 +1,7 @@
 {% liquid
   include 'lib/must_be_authenticated'
 
-  include 'lib/items/main'
+  include 'lib/queries/categories'
   include 'lib/queries/presigned_url'
 
   include 'theme/simple/items/new', icons: context.exports.lib.icons
