--- a/app/views/pages/items/edit.liquid
+++ b/app/views/pages/items/edit.liquid
@@ -1,7 +1,7 @@
 {% liquid
   include 'lib/must_be_authenticated'
 
-  include 'lib/items/main'
+  include 'lib/queries/categories'
   include 'lib/queries/items/find', id: context.params.id
 
   include 'lib/queries/presigned_url'
