--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -20,7 +20,7 @@
 
       <div class="my-3">
         <label class="block" for="name">Name</label>
-        <input class="w-2/3 form-input" type="text" id="name" name="item[name]" value="{{ item.name }}" />
+        <input class="w-2/3 form-input" type="text" id="name" name="item[name]" value="{{ item.name }}" autofocus />
         {% if item.errors.name %}
         <span class="text-red-800">{{ item.errors.name }}</span>
         {% endif %}
