--- a/app/views/partials/lib/queries/categories.liquid
+++ b/app/views/partials/lib/queries/categories.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  assign icons = 'lib.categories' | t | parse_json
+  assign icons = 'lib.categories' | t
 
   export icons, namespace: 'lib'
 %}
