--- a/app/views/partials/theme/simple/orders/form.liquid
+++ b/app/views/partials/theme/simple/orders/form.liquid
@@ -10,7 +10,7 @@
 <h1 class="mb-8 text-3xl font-medium">
   <a href="/dashboard">{{ 'app.dashboard' | t }}</a>
   <!-- / {{ 'app.' | append: role | t }} -->
-  / {{ 'app.orders' | t }}
+  / {{ 'app.orders.new' | t }}
 </h1>
 
 
