--- a/app/views/partials/theme/simple/items/form.liquid
+++ b/app/views/partials/theme/simple/items/form.liquid
@@ -62,13 +62,12 @@
         {% endif %}
       </div>
 
-          {{ item }}
       <div class="mt-3">
         <label class="block" for="cover_photo">Icon</label>
         <select class="w-64 form-select" id="price" name="item[cover_photo]">
           {% for icon in icons %}
-          <option value="{{ icon }}" {% if item.cover_photo == icon %}selected{% endif %}>
-            {{ icon }}
+          <option value="{{ icon[0] }}" {% if item.cover_photo == icon[0] %}selected{% endif %}>
+            {{ icon[1] }}
           </option>
           {% endfor %}
         </select>
