Change copy & styling for no orders

--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -40,7 +40,7 @@
     </tbody>
   </table>
 {% else %}
-  <p class="w-full text-center text-lg font-medium">
-    Your orders will appear here.
+  <p class="w-full text-lg font-medium">
+    Your orders will appear here once you have any.
   </p>
 {% endif %}
